# private-message

./: Anchor.toml
programs/private-message/: Cargo.toml
programs/private-message/src/: lib.rs
programs/zk-private-message/: Cargo.toml
programs/zk-private-message/src/: lib.rs
tests/: private-message.ts  zk-private-message.ts
