[package]
name = "private-message"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_private_message"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version="0.29.0", features = ["init-if-needed"]}
light-system-program = { version = "0.3.4", features = ["cpi"]}
account-compression = { version = "0.3.5" }

